WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144554
[GTK][SOUP] Web and Network processes don't know how to get memory size on OSX
https://bugs.webkit.org/show_bug.cgi?id=144554
Summary
[GTK][SOUP] Web and Network processes don't know how to get memory size on OSX
Philip Chimento
Reported
2015-05-03 15:39:32 PDT
The Soup backend has apparently never been compiled on OSX before, so it needs Darwin-specific code. Although perhaps given #144081's recent landing, WebProcesSoup and NetworkProcessSoup should be ported to use WTF::ramSize?
Attachments
Patch for 2.6.x
(1.72 KB, patch)
2015-05-03 15:42 PDT
,
Philip Chimento
no flags
Details
Formatted Diff
Diff
Patch
(4.91 KB, patch)
2015-05-07 22:48 PDT
,
Philip Chimento
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philip Chimento
Comment 1
2015-05-03 15:42:04 PDT
Created
attachment 252287
[details]
Patch for 2.6.x This patch applies to 2.6.x, which doesn't have WTF::ramSize yet.
WebKit Commit Bot
Comment 2
2015-05-03 15:45:17 PDT
Attachment 252287
[details]
did not pass style-queue: Total errors found: 0 in 0 files If any of these errors are false positives, please file a bug against check-webkit-style.
Csaba Osztrogonác
Comment 3
2015-05-04 08:28:14 PDT
changelog please
Darin Adler
Comment 4
2015-05-04 15:54:54 PDT
Should use a shared function, not local copies in two different source files of a function that definitely exists somewhere else in WebKit.
Philip Chimento
Comment 5
2015-05-07 22:48:12 PDT
Created
attachment 252686
[details]
Patch
Philip Chimento
Comment 6
2015-05-07 22:48:43 PDT
Added changelog.
WebKit Commit Bot
Comment 7
2015-05-10 20:10:36 PDT
Comment on
attachment 252686
[details]
Patch Clearing flags on attachment: 252686 Committed
r184064
: <
http://trac.webkit.org/changeset/184064
>
WebKit Commit Bot
Comment 8
2015-05-10 20:10:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug