[GTK][SOUP] Web and Network processes don't know how to get memory size on OSX https://bugs.webkit.org/show_bug.cgi?id=144554

Patch by Philip Chimento <philip.chimento@gmail.com> on 2015-05-10
Reviewed by Darin Adler.

* NetworkProcess/soup/NetworkProcessSoup.cpp:
(WebKit::NetworkProcess::platformSetCacheModel): Use WTF::ramSize()
instead of local function. Also use WTF::MB instead of dividing by
1024 * 1024.
(WebKit::getMemorySize): Deleted.
* WebProcess/soup/WebProcessSoup.cpp:
(WebKit::WebProcess::platformSetCacheModel): Ditto.
(WebKit::getMemorySize): Deleted.

Canonical link: https://commits.webkit.org/162887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184064 268f45cc-cd09-0410-ab3c-d52691b4dbfc